# linesweeper-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/linesweeper/: __init__.py
src/: lib.rs
tests/: test_union.py
