[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "linesweeper"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest",
    "fonttools[ufo]",
    "ufoLib2",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "linesweeper._linesweeper"
